# qq-win-db-key

./: .gitignore  DANGER.py  LICENSE  README.md  android.md  android_get_backup_key.js  android_get_backup_key.py  android_get_key.py  android_hook.py  android_hook_md5.py  hook.py  ios_get_key.js  linux_qq_get_key.py  mac qq win 教程.md  main.py  nt qq android db 教程.md  nt qq ios db 教程.md  nt qq mac db 教程.md  nt qq win db 教程.md  pc qq 教程.md  pcqq_DANGER_rekey.py  pcqq_dump.py  pcqq_get_key.py  pcqq_get_key.ver9.9.17-31363.py  pcqq_rekey_to_none.cpp  pyproject.toml  rekey_to_none.cpp  windows_ntqq_get_key.ps1  基础教程 - NTQQ 解密数据库.md  基础教程 - NTQQ 读取数据库.md  基础教程 - NTQQ 读取数据库y.md  教程 - NTQQ (Android).md  教程 - NTQQ (Linux) (GDB).md  教程 - NTQQ (Linux).md  教程 - NTQQ (Windows).md  教程 - NTQQ (iOS).md  教程 - NTQQ (macOS ARM，无需关闭SIP).md  教程 - NTQQ (macOS).md  教程 - PCQQ (Windows).md  教程 - iOS版QQ.md  (+2 more)
scripts/android/: android_dump.js  android_get_backup_key.js  android_get_backup_key.py
scripts/ios/: ios_get_key.js
scripts/macos-arm-nosip/: find_key_func.py  qq_web.py
scripts/macos/arm-nosip/: qq_key_extractor.py  qq_web.py
scripts/windows/ntqq/: windows_ntqq_get_key.ps1
scripts/windows/pcqq/: pcqq_DANGER_rekey.py  pcqq_dump.py  pcqq_get_key.py
tests/: conftest.py  test_setup_validation.py
vibe-researching/: NTQQ-Linux-DB-Key-Research.md  qqnt-dbkey-hook.js
